# tabular

./: .gitignore  Dockerfile  dodo.py  pyproject.toml
tabular/data/: make_dataset.sh
tabular/features/: build_features.py
tabular/models/: train_model.py
tabular/models/config/: catnet.py  catnet_tf.py  dnn.py  linear.py  mixer.py  rf.py  transformer.py
