[tool.poetry]
name = "tabular"
version = "0.1.0"
description = ""
authors = ["Cristian Garcia <cgarcia.e88@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"
kaggle = "^1.5.12"
doit = "^0.33.1"
scikit-learn = "^0.24.2"
pandas = "^1.2.4"
numpy = "^1.20.3"
debugpy = "^1.3.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.6b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
